# python_ASRAD_reader

./: .gitignore  ASRAD_reader.py  LICENSE  main.py  pyproject.toml  read_me.html  readme.md  readme_ZhTW.md  setup.py
.github/: copilot-instructions.md
ASRAD_reader/: Dataset.py  LoadingLib.py  NanMode.py  ObservationalDataset.py  SpecialValue.py  StationObservationalData.py  __init__.py  loader.py  nan_mode.py  special_value.json
asrad-reader/: special_value.py
asrad_reader/: __init__.py  loader.py  nan_mode.py  obs_data_frame.py  special_value.py
recipe/: build.ps1  meta.yaml
