[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asrad-reader"
version = "0.4.6"
description = "A toolkit for processing CWA long-term observation station data from https://asrad.pccu.edu.tw."
readme = "readme.md"
requires-python = ">=3.11.7"
authors = [{ name = "wyork507", email = "wyork507@gmail.com" }]
license = "MIT"
dependencies = [
	"numpy>=1.26.2",
	"pandas>=2.1.4",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wyork507/python_asrad_reader"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["asrad_reader*"]

[tool.setuptools.package-data]
asrad_reader = ["py.typed"]
